--- a/index.css
+++ b/index.css
@@ -1,7 +1,9 @@
 body {
-    margin: 0;
-    padding: 20px;
     
+    background-image: url("password back.jpg");
+    background-size: cover;
+    height: 100vh;
+   
 }
 
 #container{
@@ -13,7 +15,7 @@ background-color: #1F2937;
 opacity: 1;
 padding-left: 20px;
 padding-right: 10px;
- max-width: 80%;
+max-width: 80%;
 margin: auto;
 }
 
