--- a/index.css
+++ b/index.css
@@ -17,6 +17,7 @@ opacity: 1;
 padding-left: 20px;
 padding-right: 10px;
 margin: 0 auto;
+
 }
 
 #text{
@@ -75,6 +76,8 @@ margin-bottom: 0;
 }
 .area-container{
    display: flex;
+   
+   
 }
 #left-text{
 width: 200px;
@@ -101,6 +104,7 @@ padding-top:3px;
 #text-container{
     display: flex;
     margin-top: 20px;
+   
 }
 #left-icon{
 margin-right: 50px;
@@ -118,4 +122,15 @@ background-color: #10B981;
 border: none;
 border-radius: 6px;
 padding: 0px 15px;
+}
+
+#msg {
+    color: white;
+    background-color: #28a745;
+    padding: 6px 10px;
+    margin-top: 10px;
+    width: fit-content;
+    border-radius: 5px;
+    font-weight: bold;
+    display: none;  /* hidden by default */
 }
