--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body {
 }
 
 #container{
-width: 83%;
+width: 600px;
 height: 530px;
 border: 1px solid white;
 border-radius: 5px;
@@ -16,8 +16,7 @@ background-color: #1F2937;
 opacity: 1;
 padding-left: 20px;
 padding-right: 10px;
-margin-left: auto;
-margin-right: auto;
+margin: auto;
 
 }
 
